RESOLVED FIXED294828
[iOS] _WKWarningView should stop using deprecated UITextItemInteraction API
https://bugs.webkit.org/show_bug.cgi?id=294828
Summary [iOS] _WKWarningView should stop using deprecated UITextItemInteraction API
Abrar Rahman Protyasha
Reported 2025-06-23 01:05:45 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2025-06-23 01:09:33 PDT
EWS
Comment 2 2025-06-23 10:31:08 PDT
Committed 296522@main (714c20614f9c): <https://commits.webkit.org/296522@main> Reviewed commits have been landed. Closing PR #47050 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.