[iOS] _WKWarningView should stop using deprecated UITextItemInteraction API https://bugs.webkit.org/show_bug.cgi?id=294828 rdar://106668003

Reviewed by Wenson Hsieh and Megan Gardner.

This patch drops usage of the UITextItemInteraction API, which has been
deprecated since iOS 17, and instead adopts UITextView API
`-textView:primaryActionForTextItem:defaultAction:` and
`-textView:menuConfigurationForTextItem:defaultMenu:` instead.

No new tests since this does not change functionality. Test coverage in
the TestWebKitAPI.WebKit.SafeBrowsing suite suffices.

* Source/WebKit/UIProcess/Cocoa/_WKWarningView.mm:
(-[_WKWarningView textView:primaryActionForTextItem:defaultAction:]):
(-[_WKWarningView textView:menuConfigurationForTextItem:defaultMenu:]):
(-[_WKWarningView textView:shouldInteractWithURL:inRange:interaction:]): Deleted.

Canonical link: https://commits.webkit.org/296522@main