Source/WebKit/UIProcess/Cocoa/_WKWarningView.mm
@@ -523,14 +523,18 @@ static RetainPtr<ViewType> makeLabel(NSAttributedString *attributedString)
     [self layoutText];
 }
 
-ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
-- (BOOL)textView:(UITextView *)textView shouldInteractWithURL:(NSURL *)URL inRange:(NSRange)characterRange interaction:(UITextItemInteraction)interaction
-ALLOW_DEPRECATED_IMPLEMENTATIONS_END
-ALLOW_DEPRECATED_DECLARATIONS_END
+- (UIAction *)textView:(UITextView *)textView primaryActionForTextItem:(UITextItem *)textItem defaultAction:(UIAction *)defaultAction
 {
-    [self clickedOnLink:URL];
-    return NO;
+    if (textItem.contentType == UITextItemContentTypeLink)
+        [self clickedOnLink:textItem.link];
+    return nil;
+}
+
+- (UITextItemMenuConfiguration *)textView:(UITextView *)textView menuConfigurationForTextItem:(UITextItem *)textItem defaultMenu:(UIMenu *)defaultMenu
+{
+    // We implement this delegate method because the text view requests a menu to be presented
+    // if a `nil` action is returned from `textView:primaryActionForTextItem:defaultAction:`.
+    return nil;
 }
 
 - (void)didMoveToWindow
